--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+.container{
+    display: block;
+    height: 350px;
+    max-height: 350px;
+    width: 400px;
+    overflow: scroll;
+    background-color: red;
+}
+.tab-emulator{
+    border-width: 0;
+    border-radius: 15px 15px 0 0;
+    background-color: darkgrey;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 80px;
+    width: 300px;
+}
+.tab-emulator .icon{
+    width: 60px;
+    height: 60px;
+}
+.tab-emulator .title-input{
+    margin-left: 20px;
+    width: 240px;
+    height: 70px;
+    font-size: 30px;
+    font-weight: normal;
+}
+.tab-emulator .cross{
+    justify-self: flex-end;
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
+}
+
+
 em{
     font-weight: lighter;
 }
@@ -86,6 +124,8 @@ input.emoji{
 ul{
     list-style-type: none;
     width: 100%;
+    /*height: 100%;*/
+    overflow: scroll;
 }
 li{
     margin: 10px;
