--- a/style.css
+++ b/style.css
@@ -11,7 +11,42 @@
     align-items: center;
 
 }
+.row-of-tab-emulators{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    height: 70px;
+    min-height: 70px;
+    overflow: hidden;
+}
+.tab-emulator-footer{
+    width: 100%;
+    height: 35px;
+    min-height: 35px;
+    background-color: #888;
+    margin-top: -20px;
+    z-index: 1;
+}
+.tab-emulator-aux{
+    width: 5px;
+    background-color: #444 !important;
+    z-index: 10 !important;
+    height: 62px !important;
+    /*filter: blur(1px);*/
+}
+.left {
+    border-radius: 0 25px 20px 0 !important;
+    margin-right: -1px;
+}
+
+.right {
+    border-radius: 25px 0 0 20px !important;
+    margin-left: -1px;
+}
 .tab-emulator{
+    z-index: 100;
     border-width: 0;
     border-radius: 25px 25px 0 0;
     background-color: #888;
@@ -92,7 +127,8 @@ em{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 15px;
+    padding: 10px;
 }
 .submitBtn{
     width: auto;
