--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@
     /*outline: none;*/
 
 }
-.tab-emulator .cross{
+ .cross{
+     position: relative;
     justify-self: flex-end;
     margin-left:  5px;
     width: 20px;
@@ -95,61 +96,15 @@
     font-size: 20px;
     color:#eee;
 }
+ .cross:hover{
+     
+ }
 
 
 em{
     font-weight: lighter;
 }
-.tab-content {
-    display: none;
-}
-.tab-content.active {
-    display: block;
-}
-.tab{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    min-width: 400px;
-}
-.tablinks{
-    width: 50%;
-    padding: 10px;
-    text-align: center;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    cursor: pointer;
-}
-.tablinks.active{
-    background-color: #ccc;
-}
-.submitButtonDiv{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-    padding: 10px;
-}
-.submitBtn{
-    width: auto;
-    height: 30px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-.cancelBtn{
-    padding: 5px 10px;
-    color: red;
-    border: 1.5px solid red;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 10px;
-    background-color: transparent;
-    font-size: 16px;
-    
-}
+
 .randomTabBtn{
     padding: 4px 8px;
     color: white;
@@ -159,78 +114,33 @@ em{
     background-color: transparent;
     font-size: 28px;
 }
-input, select {
-    width: auto;
-    height: 40px;
-    padding: 4px 15px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    font-size: 16px;
-    color: #333;
-}
-input.emoji{
-    width:70px;
-    /*padding: 2px;*/
-    /*font-size: 20px;*/
-    text-align: center;
-    margin-right: 8px;
 
-}
-.inListInput{
-    width: auto;
-    height: auto;
-    /*padding: auto;*/
-    margin: 8px 0;
-    display: inline-block;
-    border: 0 solid #ccc;
-    border-radius: 0;
-    box-sizing: border-box;
-    /*font-size: auto;*/
-    color: #333;
-
-}
-
-ul{
-    list-style-type: none;
-    width: 100%;
-    /*height: 100%;*/
-    overflow: scroll;
-}
-li{
-    margin: 10px;
-    width: 100%;
-}
-.li-icon{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    width: 70%;
-    height: 30px;
-    padding: 5px 15px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius:5px;
-    font-size: 16px;
-}
-.deleteButton{
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-}
-.iconImage{
-    width: 20px;
-    height: 20px;
-}
-.openEmojiInstructionsText{
-    text-align: center;
-    width: 80%;
-}
 .errorMessage{
     color:red;
     text-align: center;
+}
+
+/*tooltip*/
+
+
+ .tooltiptext {
+     visibility: hidden;
+     width: 38px;
+     font-size: 12px;
+     background-color: #666;
+     color: #ddd;
+     text-align: center;
+     border-radius: 6px;
+     padding: 3px 5px;
+
+     /* Position the tooltip */
+     position: absolute;
+     z-index: 1000;
+        top: -20px;
+        left: 50%;
+        margin-left: -19px;
+}
+
+.cross:hover .tooltiptext {
+    visibility: visible;
 }
