--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@
     z-index: 1;
 }
 .tab-emulator-aux{
-    width: 5px;
+    width: 5%;
+    max-width: 5% !important;
     background-color: #444 !important;
     z-index: 10 !important;
     height: 62px !important;
@@ -56,11 +57,12 @@
     justify-content: flex-start;
     align-items: center;
     height: 70px;
-    width: 300px;
+    width: 90%;
     padding:5px 10px
 }
 .tab-emulator .icon{
     width: 40px;
+    min-width: 40px;
     height: 40px;
     line-height: 40px;
     font-size: 32px;
@@ -78,12 +80,11 @@ input{
     line-height: 40px;
     display: inline-block;
     vertical-align: middle;
-    margin-left: 20px;
-    width: 240px;
-    max-width: 240px;
+    margin-left: 10px;
+    width: 100%;
     height: 40px;
     max-height: 40px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
     white-space: nowrap;
     color:#eee;
